force-app/main/default/objects/BMCServiceDesk__SYSUsersTimezones__c/BMCServiceDesk__SYSUsersTimezones__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the time zones of users.</description>
    <label>Users Timezones</label>
    <nameField>
        <label>Locale</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSUsersTimezones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>