force-app/main/default/objects/BMCServiceDesk__SYSUsersTimezones__c/fields/BMCServiceDesk__cityName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__cityName__c</fullName>
    <description>City name.</description>
    <label>City Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>