force-app/main/default/objects/BMCServiceDesk__SYSUsersTimezones__c/fields/BMCServiceDesk__FKUserId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FKStaff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SYSUsersTimezones</relationshipName>
    <type>Lookup</type>
</CustomField>