force-app/main/default/objects/BMCServiceDesk__SYSUsersTimezones__c/fields/BMCServiceDesk__Timezone__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Timezone__c</fullName>
    <description>This holds the Timezone value sourced from the User object</description>
    <label>Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>